# pytest-archon

./: .flake8  .pre-commit-config.yaml  .pre-commit-hooks.yaml  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
examples/: files.txt
examples/web-and-cli/: README.md  pyproject.toml
examples/web-and-cli/myapp/cli/: main.py
examples/web-and-cli/myapp/database/: __init__.py  fakedb.py
examples/web-and-cli/myapp/logic/: __init__.py  applogic.py
examples/web-and-cli/myapp/web/: server.py
examples/web-and-cli/tests/: test_architecture.py
py3arch/: __init__.py  __main__.py  collect.py  config.py  core_modules.py  import_finder.py  modulefinder.py  modulefinder2.py  pytest_py3arch.py  rule.py
py3arch/pytest/: plugin.py
pytest_arch/: __init__.py  collect.py  core_modules.py  plugin.py  rule.py
pytest_arch/pytest/: plugin.py
pytest_archon/: __init__.py  collect.py  core_modules.py  plugin.py  rule.py
src/pytest_archon/: collect.py  failure.py  plugin.py  rule.py
tests/: conftest.py  test_ast.py  test_bug_airflow_kubernetes.py  test_collect.py  test_core_modules.py  test_docstrings.py  test_import_finder.py  test_main.py  test_modules.py  test_pytest_fixture.py  test_pytest_rules.py  test_rule.py  test_rule_parser.py  test_rules.py
tests/data/pkgA/subpkg2/: moduleZ.py
