[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "pytest-arch"
description = "Rule your architecture like a real developer"
authors = [
    { author = "Arjan Molenaar", email = "gaphor@gmail.com" },
    { author = "Joachim Bargsten", email = "jw@bargsten.org" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache Software License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License",
    "Framework :: Pytest",
]
dependencies = [
    "pytest-check",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.2",
    "flake8",
    "black"
]

[tool.black]
line-length = 110

[tool.isort]
profile = "black"
line_length = 110

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]

[project.entry-points.pytest11]
arch = "pytest_arch.plugin"
