[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "web-and-cli"
description = "Pytest-archon example project"
authors = [
    { author = "Arjan Molenaar", email = "gaphor@gmail.com" },
    { author = "Joachim Bargsten", email = "jw@bargsten.org" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "Apache Software License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: Apache Software License",
    "Framework :: Pytest",
    "Development Status :: 5 - Production/Stable",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-archon",
]

[tool.setuptools.packages.find]
include = ["myapp"]
